--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>MUMU</title>
 </head>
 <body>
-  <p> HAI <3 </p>
+  <p> HAI ^-^ </p>
 </body>
 </html>
